<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dt_time_utils</name>
  <version>1.0.0</version>
  <description>Wrapper around builtin_interfaces time to make operations easier</description>
  <author email="nicholasganshyan@gmail.com">nicholas-gs</author>
  <maintainer email="nicholasganshyan@gmail.com">nicholas-gs</maintainer>
  <license>GPLv3</license>

  <depend>builtin_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
